--- a/01WebBasics/index.html
+++ b/01WebBasics/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GKCSD</title>
 </head>
 <body>
-    <h1>Hello, This is my new Line, So you like it. Thank you</h1>
+    <p>This is regular p tag</p>
+
+    <p id="idone">This is p tag with id</p>
+
+    <p class="classone">This is p with class</p>
+
+    <p>This is lower paragraph</p>
+
+    <p>This is another lower paragraph</p>
+
     <script src="script.js"></script>
 </body>
 </html>
