--- a/01WebBasics/index.html
+++ b/01WebBasics/index.html
@@ -17,6 +17,8 @@
 
     <p>This is another lower paragraph</p>
 
+    <p>This was added via HTML</p>
+
     <script src="script.js"></script>
 </body>
 </html>
