input tag added

--- a/01WebBasics/index.html
+++ b/01WebBasics/index.html
@@ -19,6 +19,7 @@
 
     <p>This was added via HTML</p>
 
+    <input type="text" name="" id="myform" placeholder="Search here">
     <button>Click ME!</button>
 
     <script src="script.js"></script>
