function adde to button

--- a/01WebBasics/index.html
+++ b/01WebBasics/index.html
@@ -20,8 +20,8 @@
     <p>This was added via HTML</p>
 
     <input type="text" name="" id="myform" placeholder="Search here">
-    <button>Click ME!</button>
+    <button onclick="myValidation()">Click ME!</button>
 
-    <script src="script.js"></script>
+    <script src="Validation.js"></script>
 </body>
 </html>
