--- a/01WebBasics/index.html
+++ b/01WebBasics/index.html
@@ -20,7 +20,13 @@
     <p>This was added via HTML</p>
 
     <input type="text" name="" id="myform" placeholder="Search here">
-    <button onclick="myValidation()">Click ME!</button>
+    <button onclick="myValidation()">Click ME!</button><br><br>
+
+    <form class="myform">
+        <input type="text" name="username" placeholder="Username">
+        <input type="text" name="realname" placeholder="Realname">
+        <button type="submit">Submit</button>
+    </form>
 
     <script src="Validation.js"></script>
 </body>
