--- a/01WebBasics/index.html
+++ b/01WebBasics/index.html
@@ -28,6 +28,6 @@
         <button type="submit">Submit</button>
     </form>
 
-    <script src="localstorage.js"></script>
+    <script src="jsonhandle.js"></script>
 </body>
 </html>
